add book to card

--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="styles.css">
+    
     <title>Document</title>
   </head>
   <body>
+    <div class="card">
+      <legend class="legend">My Library</legend>
+      <div id="library"></div>
+      <button onclick="addBookToLibrary()">Add Book</button>
+
+    </div>
+  <script src="script.js" defer></script>
   </body>
 </html>
