working on remove button

--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
       <p>
         <button id="showDialog" class="books">New Book</button>
       </p>
-      <div class="new-cards">
-        
+      <div id="new-cards" class="new-cards" data-index-number="5">
       </div>
     </div>
   <script src="script.js" defer></script>
